<resources>
    <string name="app_name">Teleroid</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="caption">Write a caption...</string>
    <string name="post">Post</string>
    <string name="capture">Take Photo</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="action_register">Register</string>
    <string name="already_account">Already have an account?</string>
    <string name="login">Log in</string>
    <string name="gallery">Select Gallery</string>
    <string name="single_like">%1$s likes this</string>
    <string name="caption_preview"><b>%1$s:</b> %2$s</string>
    <string name="comment_preview"><b>%1$s:</b> %2$s</string>
    <string name="view_all_comments">View all %1$d comments</string>
    <string name="comment_hint">Add a comment...</string>
    <plurals name="multiple_likes">
        <item quantity="one">%1$s and %2$d other like this</item>
        <item quantity="other">%1$s and %2$d others like this</item>
    </plurals>
</resources>