<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CreateFragment">

    <ImageView
        android:id="@+id/newPhoto"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        tools:src="@tools:sample/avatars"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/captureButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:layout_centerHorizontal="true"
        android:enabled="true"
        android:text="@string/capture"
        android:layout_below="@id/newPhoto"/>

    <EditText
        android:id="@+id/captionField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/caption"
        android:inputType="textMultiLine"
        android:minLines="4"
        android:selectAllOnFocus="true"
        android:layout_below="@id/captureButton"/>

    <Button
        android:id="@+id/postButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="16dp"
        android:enabled="true"
        android:text="@string/post"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/captionField"/>

</RelativeLayout>